--- a/src/main/resources/templates/front-end/included_mail.html
+++ b/src/main/resources/templates/front-end/included_mail.html
@@ -1,4 +1,3 @@
-
 <div id="lightbox" class="none">
 	<form action="">
 		<article>
@@ -6,19 +5,20 @@
 				<h1>意見回饋</h1>
 				<div class="feed-back-row1">
 					<p>暱稱</p>
-					<input type="text" placeholder="哈哈哈" value="" disabled>
+					<input type="text" value="" disabled>
 				</div>
 				<div class="feed-back-row2">
-					<p>帳號</p>
-					<input type="text" placeholder="jay6666666@gmail.com" value=""
-						disabled>
+					<p>主旨</p>
+					<input type="text" placeholder="請輸入意見標題(15字內)" maxlength="80">
 				</div>
 				<div class="feed-back-row3">
-					<p>意見回饋</p>
-					<input type="textarea" class="feedback">
+					<p>內容</p>
+					<textarea placeholder="請輸入意見內容(150字內)" class="input-text" maxlength="620"
+						style="text-align: left; vertical-align: top;"></textarea>
 				</div>
+
 				<div class="feed-back-button">
-					<button type="button" class="confirm">確認</button>
+					<button type="button" class="confirm">送出</button>
 					<button type="button" class="btn_model_close">取消</button>
 				</div>
 			</div>
