--- a/src/main/resources/templates/front-end/included-head.html
+++ b/src/main/resources/templates/front-end/included-head.html
@@ -1,6 +1,6 @@
  	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <link rel="stylesheet" th:href="@{/css/style_add.css}">
     <link rel="stylesheet" th:href="@{/css/mok/mok_opinion.css}">
