--- a/src/main/resources/templates/front-end/mj/course_filter_two_toggle.html
+++ b/src/main/resources/templates/front-end/mj/course_filter_two_toggle.html
@@ -1201,7 +1201,7 @@
                                         </div>
                                         <div class="rbt-author-info">
 
-                                            By <span th:text="${courseData.uId}"></span>
+                                            By <span th:text="${courseData.userVO.uName}"></span>
                                         </div>
                                     </div>
                                     <div class="rbt-card-bottom">
