--- a/src/main/resources/templates/front-end/forumpost/update_forumpost_input.html
+++ b/src/main/resources/templates/front-end/forumpost/update_forumpost_input.html
@@ -77,14 +77,14 @@
 			<span  th:if="${#fields.hasErrors('fpContent')}" th:errors="*{fpContent}" class="error" id="fpContent.errors"></span>
 			</div>
 
-<!-- 			抓取貼文時間 -->
-			<input type="date" th:field="*{fpTime}" hidden onclick="hideContent('fpTime.errors');" />
-<!-- 			抓取貼文狀態 -->
-			<input type="text" th:field="*{fpStatus}" hidden onclick="hideContent('fpStatus.errors');" />
-<!-- 			抓取更新時間 -->
-			<input type="date" th:field="*{fpUpdate}" hidden onclick="hideContent('fpUpdate.errors');" />
-<!-- 			抓取觀看數 -->
-			<input type="text" th:field="*{fpViews}" hidden onclick="hideContent('fpStatus.errors');" />
+<!-- <!-- 			抓取貼文時間 --> 
+<!-- 			<input type="date" th:field="*{fpTime}" hidden onclick="hideContent('fpTime.errors');" /> -->
+<!-- <!-- 			抓取貼文狀態 --> 
+<!-- 			<input type="text" th:field="*{fpStatus}" hidden onclick="hideContent('fpStatus.errors');" /> -->
+<!-- <!-- 			抓取更新時間 --> 
+<!-- 			<input type="date" th:field="*{fpUpdate}" hidden onclick="hideContent('fpUpdate.errors');" /> -->
+<!-- <!-- 			抓取觀看數 --> 
+<!-- 			<input type="text" th:field="*{fpViews}" hidden onclick="hideContent('fpStatus.errors');" /> -->
 			
 			
 			<div>
